--- a/lana.html
+++ b/lana.html
@@ -4,7 +4,7 @@
 lana ödevi
 </title>
 </head>
-  <body background ="C:\Users\asus\Desktop\pexels-toni-ferreira-12154830.jpg" wigth=100 weight=100>
+  <body background ="pexels-toni-ferreira-12154830.jpg" wigth=100 weight=100>
   <p align ="right">
 <b>
   <u>
@@ -35,32 +35,38 @@ lana ödevi
 <h2> BİRTHDAY AND PLACE </h2>
 <h3> 25/11/2005 </h3>
 <h3> Hama - Kifrzeta </h3>
-<img src="C:\Users\asus\Desktop\1704588759417.jpg" alt="BİRTHDAY AND PLACE" width="200" height="250">
+<img src="1704588759417.jpg" alt="BİRTHDAY AND PLACE" width="200" height="250">
 <h2> HOOBİES </h2>
 </font>
 <ol type ="I">
+  <font size ="5" color ="white">
 <li> <h3> writeing : My grandmother was a writer who wrote poems and thoughts. I learned from her how to write poetry, and this love took root in my heart, so I began writing poetry and novels after my grandmother.</h3></li>
 <h3>.(انني متعبة وقد اغدق قلبي بتعدد الخيبات , لو سمحت يا سيدي تذكرة لحدود السنغال (من روايتي "لا نترك الحقائب")) </h3>
 <li> <h3> drawning : For me, drawing is just a simple hobby that I don't get very creative with. I learned drawing from my friends, as I had many friends who were creative painters.</h3></li>
 <li> <h3> chess playing : My cousin taught me chess, then I became attached to this game, so I played it every day with my friend repeatedly until it became an integral part of me, but after the earthquake, I gave up on it for a long time, and now I am back to playing it again. </h3></li>
+  </font>
 </ol>
-  
+  <font size ="5" color ="white">
 <h2> skills </h2>
+  </font>
 <ol>
-<table border="1" >
-  <tr>
-<td> <font size="4" color ="white"> <li> <i> <h3> I am proficient in using Microsoft Office with all its applications. </h3> </li> </i>
-</font> </td>
+ <table border="1" >
+<tr>
+<td> <font size="4" color ="white">
+<li> <h3> <i> I am proficient in using Microsoft Office with all its applications.  </h3> </li>
+</i> </font> </td>
 </tr>
 </table>
 
 <table border="1" >
 <tr>
 <td> <font size="4" color ="white">
-<li> <i> <h3> I am proficient in speaking English, Turkish, Arabic, and a few Japanese sentences.</h3> </li>
+<li> <h3> <i> I am proficient in speaking English, Turkish, Arabic, and a few Japanese sentences. </h3> </li>
 </i> </font> </td>
 </tr>
-</table> 
+</table>
+
+  
 <table border="1" >
 <tr>
 <td> <font size="4" color ="white">
@@ -69,8 +75,10 @@ lana ödevi
 </tr>
 </table>
 </ol>
-<img src="C:\Users\asus\Desktop\foto.jpg" alt="Photoshop Skills" width="250" height="250">
-<h2> ABOUT ME </h2>
+    
+<img src="foto.jpg" alt="Photoshop Skills" width="250" height="250">
+<font size ="5" color ="white">
+    <h2> ABOUT ME </h2>
 <i>
   <b>
     <h3> I am a girl who believes that if a person makes an effort, he will reap the rewards. </h3>
